Ajout du système d'utilisateurs + architecture globale

--- a/src/global.scss
+++ b/src/global.scss
@@ -34,4 +34,43 @@
 
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
-@import "@ionic/angular/css/palettes/dark.system.css";
+//@import "@ionic/angular/css/palettes/dark.system.css";
+
+
+// permet de surélever la page pour s'afficher au dessus du tabs
+.md section {
+  margin: 95px 0;
+}
+
+.ios section {
+  margin: 0 !important;
+}
+
+// permet de passer le tab au dessus de la page
+.md ion-router-outlet {
+  height: calc(var(--vh, 1vh) * 100);
+}
+
+ion-card > .header-md {
+  box-shadow:
+    rgb(210 106 101 / 20%) 0 3px 1px -2px,
+    rgb(210 106 101 / 0) 0 2px 2px 0px,
+    rgb(210 106 101 / 0) 0 1px 5px 0px !important;
+  width: 90%;
+  margin: auto 5%;
+}
+
+.header-md {
+  box-shadow:
+    rgb(210 106 101 / 20%) 0 3px 1px -2px,
+    rgb(210 106 101 / 14%) 0 2px 2px 0px,
+    rgb(210 106 101 / 12%) 0 1px 5px 0px !important;
+}
+
+ion-card {
+  box-shadow: rgb(210 106 101 / 20%) 0 3px 1px -2px, rgb(210 106 101 / 14%) 0 2px 2px 0px, rgb(210 106 101 / 12%) 0 1px 5px 0px !important;
+}
+
+ion-item {
+  --border-color: var(--ion-color-primary-tint);
+}
