--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,2 +1,13 @@
 // For information on how to create your own theme, please see:
 // http://ionicframework.com/docs/theming/
+
+:root {
+  /** primary **/
+  --ion-color-primary: #CD5954;
+  --ion-color-primary-rgb: 205, 89, 84;
+  --ion-color-primary-rgba: rgba(205, 89, 84, 0.1);
+  --ion-color-primary-contrast: #ffffff;
+  --ion-color-primary-contrast-rgb: 255, 255, 255;
+  --ion-color-primary-shade: #b44e4a;
+  --ion-color-primary-tint: #d26a65;
+}
