--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -1,8 +1,8 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="home" class="tabButton">
-      <ion-icon name="home"></ion-icon>
-      <ion-label>Règles</ion-label>
+      <ion-icon name="server"></ion-icon>
+      <ion-label>Pods</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="user" class="tabButton">
