--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,20 +1,62 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
-</ion-content>
+<ion-card>
+  <ion-card-header>
+    <ion-card-title>
+      <ion-row class="ion-justify-content-between">
+        Liste des pods
+        <ion-icon #refreshIcon class="refreshButton"
+                  name="refresh-outline" color="primary"
+                  (click)="refreshButton()"></ion-icon>
+      </ion-row>
+    </ion-card-title>
+  </ion-card-header>
+  <ion-card-content>
+    <ion-list>
+      <ion-item *ngFor="let pod of infoPods; index as index" [class]="index > 0 ? 'mediumButton' : ''">
+        <ion-grid>
+          <ion-row>
+            <ion-col size="2">
+              <ion-label>
+                {{ pod.namespace }}
+              </ion-label>
+            </ion-col>
+            <ion-col size="2">
+              <ion-label>
+                {{ pod.name }}
+              </ion-label>
+            </ion-col>
+            <ion-col size="1">
+              <ion-label>
+                {{ pod.cpu }}
+              </ion-label>
+            </ion-col>
+            <ion-col size="1">
+              <ion-label>
+                {{ pod.memory }}
+              </ion-label>
+            </ion-col>
+            <ion-col size="1">
+              <ion-label>
+                {{ pod.disk }}
+              </ion-label>
+            </ion-col>
+            <ion-col size="1">
+              <ion-label>
+                {{ pod.status }}
+              </ion-label>
+            </ion-col>
+            <ion-col size="2">
+              <ion-label>
+                {{ pod.date }}
+              </ion-label>
+            </ion-col>
+            <ion-col size="2">
+              <ion-label>
+                {{ pod.endDate }}
+              </ion-label>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </ion-item>
+    </ion-list>
+  </ion-card-content>
+</ion-card>
