--- a/src/app/pages/users/users.page.html
+++ b/src/app/pages/users/users.page.html
@@ -1,13 +1,42 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>users</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">users</ion-title>
-    </ion-toolbar>
-  </ion-header>
-</ion-content>
+<ion-card>
+  <ion-card-header>
+    <ion-card-title>
+      <ion-row class="ion-justify-content-between">
+        Liste des utilisateurs
+        <ion-icon #refreshIcon class="refreshButton"
+                  name="refresh-outline" color="primary"
+                  (click)="refreshButton()"></ion-icon>
+      </ion-row>
+    </ion-card-title>
+  </ion-card-header>
+  <ion-card-content>
+    <ion-list>
+      <ion-item *ngFor="let user of infoUsers; index as index" [class]="index > 0 ? 'mediumButton' : ''">
+        <ion-grid>
+          <ion-row>
+            <ion-col size="3">
+              <ion-label>
+                {{ user.session_id }}
+              </ion-label>
+            </ion-col>
+            <ion-col size="2">
+              <ion-label>
+                {{ user.name }}
+              </ion-label>
+            </ion-col>
+            <ion-col size="2">
+              <ion-label>
+                {{ user.firstname }}
+              </ion-label>
+            </ion-col>
+            <ion-col size="5">
+              <ion-label>
+                {{ user.email }}
+              </ion-label>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </ion-item>
+    </ion-list>
+  </ion-card-content>
+</ion-card>
