--- a/src/global.scss
+++ b/src/global.scss
@@ -38,18 +38,13 @@
 
 
 // permet de surélever la page pour s'afficher au dessus du tabs
-.md section {
-  margin: 95px 0;
-}
-
-.ios section {
-  margin: 0 !important;
-}
-
-// permet de passer le tab au dessus de la page
-.md ion-router-outlet {
-  height: calc(var(--vh, 1vh) * 100);
-}
+//.md section {
+//  margin: 95px 0;
+//}
+//
+//.ios section {
+//  margin: 0 !important;
+//}
 
 ion-card > .header-md {
   box-shadow:
@@ -73,4 +68,12 @@ ion-card {
 
 ion-item {
   --border-color: var(--ion-color-primary-tint);
+}
+
+.refreshButton {
+  cursor: pointer;
+}
+
+.mediumButton {
+  --color: var(--ion-color-medium);
 }
