--- a/src/global.scss
+++ b/src/global.scss
@@ -47,19 +47,23 @@
 //}
 
 ion-card > .header-md {
-  box-shadow:
-    rgb(210 106 101 / 20%) 0 3px 1px -2px,
-    rgb(210 106 101 / 0) 0 2px 2px 0px,
-    rgb(210 106 101 / 0) 0 1px 5px 0px !important;
+  box-shadow: rgb(210 106 101 / 20%) 0 3px 1px -2px,
+  rgb(210 106 101 / 0) 0 2px 2px 0px,
+  rgb(210 106 101 / 0) 0 1px 5px 0px !important;
   width: 90%;
   margin: auto 5%;
 }
 
 .header-md {
-  box-shadow:
-    rgb(210 106 101 / 20%) 0 3px 1px -2px,
-    rgb(210 106 101 / 14%) 0 2px 2px 0px,
-    rgb(210 106 101 / 12%) 0 1px 5px 0px !important;
+  box-shadow: rgb(210 106 101 / 20%) 0 3px 1px -2px,
+  rgb(210 106 101 / 14%) 0 2px 2px 0px,
+  rgb(210 106 101 / 12%) 0 1px 5px 0px !important;
+}
+
+ion-searchbar {
+  --box-shadow: rgb(210 106 101 / 20%) 0 3px 1px -2px,
+  rgb(210 106 101 / 14%) 0 2px 2px 0px,
+  rgb(210 106 101 / 12%) 0 1px 5px 0px !important;
 }
 
 ion-card {
@@ -76,4 +80,19 @@ ion-item {
 
 .mediumButton {
   --color: var(--ion-color-medium);
+}
+
+.listItem {
+  padding-right: 16px;
+}
+
+.tabContent::part(scroll) {
+  scrollbar-width: thin;
+}
+
+.buttonHeader {
+  font-size: inherit;
+  letter-spacing: inherit;
+  text-transform: inherit;
+  margin: 0;
 }
