--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -10,53 +10,68 @@
     </ion-card-title>
   </ion-card-header>
   <ion-card-content>
-    <ion-list>
-      <ion-item *ngFor="let pod of infoPods; index as index" [class]="index > 0 ? 'mediumButton' : ''">
-        <ion-grid>
-          <ion-row>
-            <ion-col size="2">
-              <ion-label>
-                {{ pod.namespace }}
-              </ion-label>
-            </ion-col>
-            <ion-col size="2">
-              <ion-label>
-                {{ pod.name }}
-              </ion-label>
-            </ion-col>
-            <ion-col size="1">
-              <ion-label>
-                {{ pod.cpu }}
-              </ion-label>
-            </ion-col>
-            <ion-col size="1">
-              <ion-label>
-                {{ pod.memory }}
-              </ion-label>
-            </ion-col>
-            <ion-col size="1">
-              <ion-label>
-                {{ pod.disk }}
-              </ion-label>
-            </ion-col>
-            <ion-col size="1">
-              <ion-label>
-                {{ pod.status }}
-              </ion-label>
-            </ion-col>
-            <ion-col size="2">
-              <ion-label>
-                {{ pod.date }}
-              </ion-label>
-            </ion-col>
-            <ion-col size="2">
-              <ion-label>
-                {{ pod.endDate }}
-              </ion-label>
-            </ion-col>
-          </ion-row>
-        </ion-grid>
-      </ion-item>
-    </ion-list>
+    <ion-searchbar show-clear-button="focus" placeholder="Rechercher" (ionInput)="searchEvent($event)"></ion-searchbar>
   </ion-card-content>
 </ion-card>
+<ion-content class="tabContent">
+  <ion-list>
+    <ion-item class="listItem">
+      <ion-grid>
+        <ion-row>
+          <ion-col *ngFor="let header of headers" [size]="header.size">
+            <ion-button fill="clear" color="dark" expand="full" class="buttonHeader" (click)="sortData(header)">
+              {{ header.title }}
+              <ion-icon *ngIf="header.sort !== 0" slot="end" [name]="'chevron-' + (header.sort < 0 ? 'up' : 'down') + '-outline'" name="chevron-down-outline"></ion-icon>
+            </ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-item>
+    <ion-item *ngFor="let pod of displayPods; index as index" class="listItem mediumButton">
+      <ion-grid>
+        <ion-row>
+          <ion-col size="2">
+            <ion-label class="ion-text-center">
+              {{ pod.namespace }}
+            </ion-label>
+          </ion-col>
+          <ion-col size="2">
+            <ion-label class="ion-text-center">
+              {{ pod.name }}
+            </ion-label>
+          </ion-col>
+          <ion-col size="1">
+            <ion-label class="ion-text-center">
+              {{ pod.cpu }}
+            </ion-label>
+          </ion-col>
+          <ion-col size="1">
+            <ion-label class="ion-text-center">
+              {{ pod.memory }}
+            </ion-label>
+          </ion-col>
+          <ion-col size="1">
+            <ion-label class="ion-text-center">
+              {{ pod.disk }}
+            </ion-label>
+          </ion-col>
+          <ion-col size="1">
+            <ion-label class="ion-text-center">
+              {{ pod.status }}
+            </ion-label>
+          </ion-col>
+          <ion-col size="2">
+            <ion-label class="ion-text-center">
+              {{ pod.date }}
+            </ion-label>
+          </ion-col>
+          <ion-col size="2">
+            <ion-label class="ion-text-center">
+              {{ pod.endDate }}
+            </ion-label>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-item>
+  </ion-list>
+</ion-content>
