Ajout du tri sur la page user + correction tri page pod

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -10,7 +10,7 @@
     </ion-card-title>
   </ion-card-header>
   <ion-card-content>
-    <ion-searchbar show-clear-button="focus" placeholder="Rechercher" (ionInput)="searchEvent($event)"></ion-searchbar>
+    <ion-searchbar #searchbar show-clear-button="always" placeholder="Rechercher" (ionInput)="searchEvent()"></ion-searchbar>
   </ion-card-content>
 </ion-card>
 <ion-content class="tabContent">
