--- a/src/app/pages/users/users.page.html
+++ b/src/app/pages/users/users.page.html
@@ -10,31 +10,43 @@
     </ion-card-title>
   </ion-card-header>
   <ion-card-content>
-    <ion-searchbar show-clear-button="focus" placeholder="Rechercher" (ionInput)="searchEvent($event)"></ion-searchbar>
+    <ion-searchbar #searchbar show-clear-button="always" placeholder="Rechercher" (ionInput)="searchEvent()"></ion-searchbar>
   </ion-card-content>
 </ion-card>
 <ion-content class="tabContent">
   <ion-list>
-    <ion-item *ngFor="let user of displayUsers; index as index" [class]="'listItem ' + (index > 0 ? 'mediumButton' : '')">
+    <ion-item class="listItem">
+      <ion-grid>
+        <ion-row>
+          <ion-col *ngFor="let header of headers" [size]="header.size">
+            <ion-button fill="clear" color="dark" expand="full" class="buttonHeader" (click)="sortData(header)">
+              {{ header.title }}
+              <ion-icon *ngIf="header.sort !== 0" slot="end" [name]="'chevron-' + (header.sort < 0 ? 'up' : 'down') + '-outline'" name="chevron-down-outline"></ion-icon>
+            </ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-item>
+    <ion-item *ngFor="let user of displayUsers; index as index" class="listItem mediumButton">
       <ion-grid>
         <ion-row>
           <ion-col size="3">
-            <ion-label>
+            <ion-label class="ion-text-center">
               {{ user.session_id }}
             </ion-label>
           </ion-col>
           <ion-col size="2">
-            <ion-label>
+            <ion-label class="ion-text-center">
               {{ user.name }}
             </ion-label>
           </ion-col>
           <ion-col size="2">
-            <ion-label>
+            <ion-label class="ion-text-center">
               {{ user.firstname }}
             </ion-label>
           </ion-col>
           <ion-col size="5">
-            <ion-label>
+            <ion-label class="ion-text-center">
               {{ user.email }}
             </ion-label>
           </ion-col>
