--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -65,10 +65,15 @@
               {{ pod.date }}
             </ion-label>
           </ion-col>
-          <ion-col size="2">
+          <ion-col size="1">
             <ion-label class="ion-text-center">
-              {{ pod.endDate }}
+              {{ pod.lastUse }}
             </ion-label>
+          </ion-col>
+          <ion-col size="1">
+            <ion-button fill="clear" color="danger" expand="full" class="buttonHeader" (click)="onClickDeletePod(pod)">
+              <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
+            </ion-button>
           </ion-col>
         </ion-row>
       </ion-grid>
