--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -74,9 +74,15 @@
             </ion-label>
           </ion-col>
           <ion-col size="1">
-            <ion-button [id]="pod.name" fill="clear" color="danger" expand="full" class="buttonHeader">
-              <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
-            </ion-button>
+            <ion-row>
+              <ion-button fill="clear" color="dark" expand="full" class="buttonHeader" (click)="handleClickItem(pod)">
+                <ion-icon slot="icon-only"
+                          [name]="pod.displayDetails ? 'chevron-up-outline' : 'chevron-down-outline'"></ion-icon>
+              </ion-button>
+              <ion-button [id]="pod.name" fill="clear" color="danger" expand="full" class="buttonHeader">
+                <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
+              </ion-button>
+            </ion-row>
             <ion-alert
               [trigger]="pod.name"
               header="Suppression"
@@ -84,9 +90,12 @@
               [buttons]="[{text: 'Annuler', role: 'cancel'},
                 {text: 'Supprimer',role: 'confirm'}]"
               (didDismiss)="onClickDeletePod($event, pod)">
-            >
+              >
             </ion-alert>
           </ion-col>
+        </ion-row>
+        <ion-row *ngIf="pod.displayDetails">
+          <app-pod class="cardItem" [pod]="pod"></app-pod>
         </ion-row>
       </ion-grid>
     </ion-item>
