--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -65,7 +65,7 @@
           </ion-col>
           <ion-col size="2">
             <ion-label class="ion-text-center">
-              {{ pod.endDate }}
+              {{ pod.date }}
             </ion-label>
           </ion-col>
           <ion-col size="1">
